--- a/GravitySimulation/Packages/manifest.json
+++ b/GravitySimulation/Packages/manifest.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.8.18",
     "com.unity.collab-proxy": "2.5.2",
+    "com.unity.collections": "2.5.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.mathematics": "1.2.6",
     "com.unity.probuilder": "5.2.3",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
